samples/_failures_safe/1761613801_f63285_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_272b7cd7.c: In function ‘main’:
./samples/SAFE/__tmp_272b7cd7.c:163:12: error: missing terminating " character
  163 |     printf("Enter edges as 'u v weight' (0-indexed
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_272b7cd7.c:163:5: error: expected expression at end of input
  163 |     printf("Enter edges as 'u v weight' (0-indexed
      |     ^~~~~~
./samples/SAFE/__tmp_272b7cd7.c:163:5: error: expected declaration or statement at end of input
